# doc_insight

./: .gitignore  README.md  main.py  pyproject.toml
data/samples/: energy_bill.txt  energy_bill_feb.txt  energy_bill_mar.txt  sustainability_report_apr.txt
docinsight/: batch.py  exporters.py  pipeline.py  reporting.py
docinsight/dashboard/: app.py
docinsight/extraction/: extractor.py  gemini_extractor.py  llm_extractor.py  router.py
docinsight/ingestion/: loader.py
docinsight/kpi/: sustainability.py
docinsight/normalization/: cleaner.py
